Fix about box wording
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@3 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/resource.rc
+++ b/resource.rc
@@ -52,12 +52,10 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Video Settings...",           ID_OPTIONS_VIDEO_SETTINGS
         MENUITEM "Joypad Settings...",          ID_OPTIONS_JOYPAD_SETTINGS
-        MENUITEM "Audio Settings...",           ID_OPTIONS_CONFIGUREAUDIOPLUGIN
-        , GRAYED
+        MENUITEM "Audio Settings...",           ID_OPTIONS_CONFIGUREAUDIOPLUGIN, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "Enable Framebuffer",          ID_OPTIONS_ENABLEFRAMEBUFFER
         MENUITEM "Set Memory Card Image",       ID_OPTIONS_SETMEMORYCARDIMAGE
-
     END
     POPUP "&Debug"
     BEGIN
@@ -65,25 +63,19 @@ BEGIN
         POPUP "Debug Options"
         BEGIN
             MENUITEM "Display Framerate",           ID_DEBUGOPTIONS_DISPLAYFRAMERATE
-
             MENUITEM "Load Map File",               ID_FILE_LOADCWMAP
             MENUITEM "Dump CRC",                    ID_DEBUG_OPTIONS_DUMPCRC
             MENUITEM "Disable HLE",                 ID_OPTIONS_DISABLEHLE
             MENUITEM "Disable INI Patches",         ID_OPTIONS_DISABLEINIPATCHES
-
             MENUITEM "Dump Opcode 0",               ID_DEBUG_DUMPOPCODE0
             MENUITEM "Pause on Unknown Opcode",     ID_DEBUG_PAUSEONUNKNOWNOPCODE
-
             MENUITEM "Dump Ram",                    ID_DEBUG_DUMPRAM
             MENUITEM "Dump GCM Reads",              ID_DEBUGOPTIONS_DUMPBLOCKREADS
-
         END
         POPUP "Compare Cores"
         BEGIN
             MENUITEM "Start Gnarly Version",        ID_COMPARECORES_STARTSERVER
-
             MENUITEM "Start Fucked Up Version",     ID_COMPARECORES_STARTCLIENT
-
         END
     END
     POPUP "Help"
@@ -127,30 +119,24 @@ END
 //
 
 IDD_MEMVIEW DIALOGEX 0, 0, 423, 231
-STYLE DS_SETFONT | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | 
-    WS_THICKFRAME
+STYLE DS_SETFONT | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE | WS_EX_APPWINDOW
 CAPTION "Memory Viewer"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
-    CONTROL         "CC MEM VIEWER",IDC_CUSTOM,"zMemView",WS_VSCROLL | 
-                    WS_TABSTOP,7,23,409,201
-    EDITTEXT        IDC_SEARCH,7,6,92,12,ES_AUTOHSCROLL | NOT WS_BORDER,
-                    WS_EX_STATICEDGE
+    CONTROL         "CC MEM VIEWER",IDC_CUSTOM,"zMemView",WS_VSCROLL | WS_TABSTOP,7,23,409,201
+    EDITTEXT        IDC_SEARCH,7,6,92,12,ES_AUTOHSCROLL | NOT WS_BORDER,WS_EX_STATICEDGE
     PUSHBUTTON      "&Find",IDC_FIND,101,6,31,12,0,WS_EX_STATICEDGE
-    COMBOBOX        IDC_MEMSEL,299,6,117,71,CBS_DROPDOWNLIST | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_MEMSEL,299,6,117,71,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_GEKKODEBUG DIALOGEX 0, 0, 571, 244
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
-    WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_WINDOWEDGE | WS_EX_APPWINDOW
 CAPTION "Gekko (PPC) Debugger"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDITPC,7,155,68,13,ES_AUTOHSCROLL | NOT WS_BORDER,
-                    WS_EX_STATICEDGE
+    EDITTEXT        IDC_EDITPC,7,155,68,13,ES_AUTOHSCROLL | NOT WS_BORDER,WS_EX_STATICEDGE
     PUSHBUTTON      "Step &Over",IDB_STEPOV,7,105,68,14
     PUSHBUTTON      "S&top",IDB_STOP,7,21,68,14
     PUSHBUTTON      "St&art",IDB_START,7,7,68,14
@@ -162,10 +148,8 @@ BEGIN
     PUSHBUTTON      "Unpause",IDB_UNPAUSE,7,56,68,14
     PUSHBUTTON      "Run To...",IDB_RUNPCTO,7,168,68,14
     PUSHBUTTON      "Set PC...",IDB_SETPC,7,141,68,14
-    LISTBOX         IDC_CALLSTACK,467,17,98,47,LBS_NOINTEGRALHEIGHT | 
-                    LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Tab1",IDC_VIEWSEL,"SysTabControl32",TCS_BOTTOM | 
-                    TCS_FIXEDWIDTH,79,7,387,220
+    LISTBOX         IDC_CALLSTACK,467,17,98,47,LBS_NOINTEGRALHEIGHT | LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Tab1",IDC_VIEWSEL,"SysTabControl32",TCS_BOTTOM | TCS_FIXEDWIDTH,79,7,387,220
     LTEXT           "Call Stack",IDC_STATIC,467,8,86,8
     PUSHBUTTON      "Step Out",IDB_STEPOUTT,7,120,68,14
     LTEXT           "PC",IDC_STATIC,81,7,10,9
@@ -176,8 +160,7 @@ BEGIN
     LTEXT           "IC",IDC_STATIC,129,7,8,9
     LTEXT           "00000000",IDS_IC,139,7,34,10
     LTEXT           "00000000",IDS_MSR,241,7,34,10
-    LISTBOX         IDC_FUNCTIONLIST,467,75,98,115,LBS_NOINTEGRALHEIGHT | 
-                    LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_FUNCTIONLIST,467,75,98,115,LBS_NOINTEGRALHEIGHT | LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Function List",IDC_STATIC,468,65,86,8
     PUSHBUTTON      "Skip PC To",IDB_SKIPPCTOO,483,237,68,14
     PUSHBUTTON      "Run PC To",IDB_RUNPCTOO,483,206,68,14
@@ -196,13 +179,11 @@ IDD_DISVIEW DIALOG  0, 0, 211, 141
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE | WS_CLIPSIBLINGS
 FONT 8, "MS Sans Serif"
 BEGIN
-    CONTROL         "Custom1",IDC_VIEW,"CtrlDisAsmView",WS_TABSTOP,0,0,210,
-                    138
+    CONTROL         "Custom1",IDC_VIEW,"CtrlDisAsmView",WS_TABSTOP,0,0,210,138
 END
 
 IDD_REGSVIEW DIALOGEX 0, 0, 302, 113
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
-    WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE | WS_EX_APPWINDOW
 CAPTION "GPR View"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
@@ -275,8 +256,7 @@ BEGIN
 END
 
 IDD_IRQSTAT DIALOGEX 0, 0, 232, 145
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
-    WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 CAPTION "Interrupt Status"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
@@ -353,32 +333,25 @@ BEGIN
 END
 
 IDD_ABOUT_GEKKO DIALOGEX 0, 0, 187, 231
-STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_VISIBLE | 
-    WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "About Gekko"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
-    LTEXT           "Development Team:\n  Lightning, ShizZy",IDC_STATIC,15,
-                    67,160,19
+    LTEXT           "Development Team:\n  Lightning, ShizZy",IDC_STATIC,15,67,160,19
     GROUPBOX        "Information",IDC_STATIC,7,55,173,90
     GROUPBOX        "Gekko Nintendo GAMECUBE Emulator",IDC_STATIC,7,7,173,43
-    LTEXT           "Verson 0.3  BETA\n26 Jul 2009\nCopyright 2005-2009 Gekko Team",
-                    IDC_STATIC,15,19,111,24
+    LTEXT           "Version 1.0 Public Release\n12 Oct 2010\nCopyright 2005-2010 Gekko Team",IDC_STATIC,15,19,111,24
     GROUPBOX        "Disclaimer",IDC_STATIC,7,151,173,54
-    LTEXT           "Gekko is not sponsored or licensed by Nintendo.\nIt is not affiliated with Nintendo in any way.  All \nlogos and/or trademarkes are property of their re-\nspective owners.  This version of Gekko may not \nbe redistributed in any way, shape, or form.",
-                    IDC_STATIC,15,161,156,40
+    LTEXT           "Gekko is not sponsored or licensed by Nintendo.\nIt is not affiliated with Nintendo in any way.  All \nlogos and/or trademarkes are property of their re-\nspective owners.  This version of Gekko may not \nbe redistributed in any way, shape, or form.",IDC_STATIC,15,161,156,40
     DEFPUSHBUTTON   "OK",IDC_ABOUT_OK,7,210,173,14
     ICON            IDI_1GEKKO,IDC_STATIC,147,18,20,20,SS_CENTERIMAGE
-    LTEXT           "Beta Testing Team:\n  Chrono, Knuckles, Exodus, Zion",
-                    IDC_STATIC,15,88,158,17
-    CONTROL         "Thanks and Greets:\n  Aprentice, Thakis, hcs, DrkIIRazi, or9, FiRES, \n  ector, monk, masken, hotquik, groepaz, d.o.u.g., \n  Martin64, Zezu",
-                    IDC_STATIC,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,14,108,
-                    159,33
+    LTEXT           "Beta Testing Team:\n  Chrono, Knuckles, Exodus, Zion",IDC_STATIC,15,88,158,17
+    CONTROL         "Thanks and Greets:\n  Aprentice, Thakis, hcs, DrkIIRazi, or9, FiRES, \n  ector, monk, masken, hotquik, groepaz, d.o.u.g., \n  Martin64, Zezu",IDC_STATIC,
+                    "Static",SS_LEFTNOWORDWRAP | WS_GROUP,14,108,159,33
 END
 
 IDD_VIDEO_CONFIG DIALOGEX 0, 0, 188, 220
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Video Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -386,33 +359,24 @@ BEGIN
     PUSHBUTTON      "Cancel",IDC_CONFIG_CANCEL,65,199,58,14
     PUSHBUTTON      "Apply",IDC_CONFIG_APPLY,123,199,58,14
     GROUPBOX        "Settings",IDC_STATIC,7,24,174,168
-    COMBOBOX        IDC_CONFIG_WINDOW_RESOLUTION,77,37,96,60,CBS_DROPDOWN | 
-                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_CONFIG_WINDOW_RESOLUTION,77,37,96,60,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Window Mode",IDC_STATIC,16,40,47,8
-    COMBOBOX        IDC_CONFIG_FULLSCREEN_RESOLUTION,77,51,96,60,
-                    CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_CONFIG_FULLSCREEN_RESOLUTION,77,51,96,60,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Fullscreen Mode",IDC_STATIC,16,54,53,8
-    COMBOBOX        IDC_CONFIG_SHADER_MODE,77,65,96,60,CBS_DROPDOWN | 
-                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_CONFIG_SHADER_MODE,77,65,96,60,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Shader Mode",IDC_STATIC,16,68,44,8
-    CONTROL         "Fullscreen",IDC_CONFIG_FULLSCREEN,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,16,86,99,10
-    CONTROL         "Anistropic Filtering",IDC_CHECK4,"Button",
-                    BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,16,98,99,10
-    CONTROL         "Fullscene Anti-Aliasing",IDC_CHECK6,"Button",
-                    BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,16,110,99,10
+    CONTROL         "Fullscreen",IDC_CONFIG_FULLSCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,86,99,10
+    CONTROL         "Anistropic Filtering",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,16,98,99,10
+    CONTROL         "Fullscene Anti-Aliasing",IDC_CHECK6,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,16,110,99,10
     CONTROL         "Force Alpha (shader mode only)",IDC_CONFIG_FORCE_ALPHA,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,134,144,10
-    CONTROL         "Wireframe",IDC_CONFIG_WIREFRAME,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,16,122,91,10
+    CONTROL         "Wireframe",IDC_CONFIG_WIREFRAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,122,91,10
     LTEXT           "Static",IDC_VIDEO_DEVICE,7,7,173,11,0,WS_EX_STATICEDGE
-    CONTROL         "Dump Textures (TGA)",IDC_CONFIG_DUMP_TEXTURES,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,16,147,144,10
+    CONTROL         "Dump Textures (TGA)",IDC_CONFIG_DUMP_TEXTURES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,147,144,10
 END
 
 IDD_JOYPAD_CONFIG DIALOGEX 0, 0, 295, 199
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Joypad Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -422,62 +386,41 @@ BEGIN
     PUSHBUTTON      "Analog D",IDC_JOYPAD_ANALOGDOWN,16,117,40,14
     PUSHBUTTON      "Analog R",IDC_JOYPAD_ANALOGRIGHT,16,145,40,14
     PUSHBUTTON      "Analog L",IDC_JOYPAD_ANALOGLEFT,16,131,40,14
-    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGUP,58,105,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGDOWN,58,119,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGRIGHT,58,147,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGLEFT,58,133,40,11,0,
-                    WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGUP,58,105,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGDOWN,58,119,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGRIGHT,58,147,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_ANALOGLEFT,58,133,40,11,0,WS_EX_STATICEDGE
     PUSHBUTTON      "C-Stick U",IDC_JOYPAD_CUP,106,39,40,14
     PUSHBUTTON      "C-Stick D",IDC_JOYPAD_CDOWN,106,53,40,14
-    LTEXT           "Static",IDC_JOYPAD_STATIC_CUP,148,41,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_CDOWN,148,55,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_CRIGHT,148,83,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_CLEFT,148,69,40,11,0,
-                    WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_CUP,148,41,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_CDOWN,148,55,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_CRIGHT,148,83,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_CLEFT,148,69,40,11,0,WS_EX_STATICEDGE
     PUSHBUTTON      "A",IDC_JOYPAD_A,196,103,40,14
     PUSHBUTTON      "B",IDC_JOYPAD_B,196,117,40,14
     PUSHBUTTON      "X",IDC_JOYPAD_X,196,131,40,14
     PUSHBUTTON      "Y",IDC_JOYPAD_Y,196,145,40,14
-    LTEXT           "Static",IDC_JOYPAD_STATIC_A,238,105,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_B,238,119,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_X,238,133,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_Y,238,147,40,11,0,
-                    WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_A,238,105,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_B,238,119,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_X,238,133,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_Y,238,147,40,11,0,WS_EX_STATICEDGE
     PUSHBUTTON      "Start",IDC_JOYPAD_START,106,103,40,14
     PUSHBUTTON      "L",IDC_JOYPAD_L,106,117,40,14
     PUSHBUTTON      "R",IDC_JOYPAD_R,106,131,40,14
     PUSHBUTTON      "Z",IDC_JOYPAD_Z,106,145,40,14
-    LTEXT           "Static",IDC_JOYPAD_STATIC_START,148,105,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_L,148,119,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_R,148,133,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_Z,148,147,40,11,0,
-                    WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_START,148,105,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_L,148,119,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_R,148,133,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_Z,148,147,40,11,0,WS_EX_STATICEDGE
     PUSHBUTTON      "D-Pad U",IDC_JOYPAD_DUP,196,39,40,14
     PUSHBUTTON      "D-Pad D",IDC_JOYPAD_DDOWN,196,53,40,14
     PUSHBUTTON      "D-Pad R",IDC_JOYPAD_DRIGHT,196,81,40,14
     PUSHBUTTON      "D-Pad L",IDC_JOYPAD_DLEFT,196,67,40,14
-    LTEXT           "Static",IDC_JOYPAD_STATIC_DUP,238,41,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_DDOWN,238,55,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_DRIGHT,238,83,40,11,0,
-                    WS_EX_STATICEDGE
-    LTEXT           "Static",IDC_JOYPAD_STATIC_DLEFT,238,69,40,11,0,
-                    WS_EX_STATICEDGE
-    CONTROL         "Enable",IDC_JOYPAD_PLUGGED,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,16,91,37,10
+    LTEXT           "Static",IDC_JOYPAD_STATIC_DUP,238,41,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_DDOWN,238,55,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_DRIGHT,238,83,40,11,0,WS_EX_STATICEDGE
+    LTEXT           "Static",IDC_JOYPAD_STATIC_DLEFT,238,69,40,11,0,WS_EX_STATICEDGE
+    CONTROL         "Enable",IDC_JOYPAD_PLUGGED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,91,37,10
     PUSHBUTTON      "Default",IDC_JOYPAD_DEFAULT,63,178,56,14
     PUSHBUTTON      "Clear",IDC_JOYPAD_CLEAR,119,178,56,14
     PUSHBUTTON      "C-Stick L",IDC_JOYPAD_CLEFT,106,67,40,14
@@ -488,8 +431,7 @@ BEGIN
     PUSHBUTTON      "Joypad 3",IDC_JOYPAD_CONTROLLER4,218,7,70,14
     GROUPBOX        "Static",IDC_JOYPAD_GROUP,7,27,280,141
     PUSHBUTTON      "Apply",IDC_JOYPAD_APPLY,232,178,56,14
-    CONTROL         1039,IDC_STATIC,"Static",SS_BITMAP,16,40,68,49,
-                    WS_EX_STATICEDGE
+    CONTROL         1039,IDC_STATIC,"Static",SS_BITMAP,16,40,68,49,WS_EX_STATICEDGE
 END
 
 
