Added version.h to the project
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@11 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -18,5 +18,6 @@
     <ClInclude Include="src\x86_utils.h" />
     <ClInclude Include="src\config.h" />
     <ClInclude Include="src\xml.h" />
+    <ClInclude Include="src\version.h" />
   </ItemGroup>
 </Project>
