--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="src\thread.h" />
     <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\types.h" />
+    <ClInclude Include="src\version.h" />
     <ClInclude Include="src\x86_utils.h" />
     <ClInclude Include="src\xml.h" />
   </ItemGroup>
