Added misc_utils to common project
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@21 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\crc.cpp" />
     <ClCompile Include="src\log.cpp" />
+    <ClCompile Include="src\misc_utils.cpp" />
     <ClCompile Include="src\timer.cpp" />
     <ClCompile Include="src\xml.cpp" />
   </ItemGroup>
@@ -139,6 +140,7 @@
     <ClInclude Include="src\config.h" />
     <ClInclude Include="src\crc.h" />
     <ClInclude Include="src\log.h" />
+    <ClInclude Include="src\misc_utils.h" />
     <ClInclude Include="src\platform.h" />
     <ClInclude Include="src\thread.h" />
     <ClInclude Include="src\timer.h" />
